Project API swagger documentation
